add_executable(visitor visitor.cpp)
add_executable(memento memento.cpp)
add_executable(responsibility_chain responsibility_chain.cpp)
add_executable(bridge bridge.cpp)
add_executable(filter filter.cpp)
add_executable(composite composite.cpp)
add_executable(decorator decorator.cpp)
add_executable(facade facade.cpp)
add_executable(flyweight flyweight.cpp)
add_executable(proxy proxy.cpp)
add_executable(observer observer.cpp)
add_executable(command command.cpp)
add_executable(interpreter Interpreter.cpp)
add_executable(iterator iterator.cpp)
add_executable(mediator mediator.cpp)
add_executable(state state.cpp)
add_executable(null_object null_object.cpp)
add_executable(strategy strategy.cpp)
add_executable(template template.cpp)
add_executable(adapter adapter.cpp)
add_executable(prototype prototype.cpp)
add_executable(builder builder.cpp)
add_executable(factory factory.cpp)
add_executable(abstract_factory abstract_factory.cpp)
add_executable(singleton singleton.cpp)